// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input Input 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 efLeRi"
          >
            Input
          </span>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
        >
          <div
            class="Box-sc-1qu1edy-0 hxUhcg"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
            />
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 efLeRi"
          >
            Set to disabled
          </span>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
        >
          <div
            class="Box-sc-1qu1edy-0 hxUhcg"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 fdcdYd"
              disabled=""
            />
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input set to required 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <form
      class="Form-n70q8u-0 laLzBn"
    >
      <h2
        class="Text-sc-1wu7vpu-0-h2 heWDlS"
        font-size="larger"
        font-weight="medium"
      >
        Required field example
      </h2>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
          color="black"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 ilQgHG"
            data-testid="field-label"
          >
            <span
              class="FieldLabel__LabelText-sc-1t1cp4f-1 efLeRi"
            >
              Label
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
          >
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="true"
                class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
                required=""
              />
            </div>
          </div>
        </label>
      </div>
      <button
        class="Button__WrapperButton-sc-1omxup2-0 hkfOQr PrimaryButton-qz78sb-0 cGyyDq"
      >
        Send
      </button>
    </form>
  </div>
</div>
`;

exports[`Storyshots Input with a affix (prefix and suffix) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <form
      class="Form-n70q8u-0 fuhEdK"
      mb="x6"
    >
      <h2
        class="Text-sc-1wu7vpu-0-h2 heWDlS"
        font-size="larger"
        font-weight="medium"
      >
        Suffix
      </h2>
      <fieldset
        class="FormSection-sc-5yud6c-1 klMAvm"
      >
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
        >
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
          >
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
              />
            </div>
            <div
              class="Box-sc-1qu1edy-0 gtRBwd"
            >
              <p
                class="Text-sc-1wu7vpu-0 eEDmVF"
                color="currentColor"
                font-size="medium"
              >
                Eaches
              </p>
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
        >
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
          >
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
              />
            </div>
            <div
              class="Box-sc-1qu1edy-0 gtRBwd"
            >
              <p
                class="Text-sc-1wu7vpu-0 eEDmVF"
                color="currentColor"
                font-size="medium"
              >
                Pallets and boxes
              </p>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormSection-sc-5yud6c-1 cJYtnA"
      >
        <legend
          class="Text-sc-1wu7vpu-0-h3 Headings__SubsectionTitle-igpciy-0 FormSection__FormSectionTitle-sc-5yud6c-0 gaHdwg"
          font-size="large"
          font-weight="medium"
        >
          With Custom Width
        </legend>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
        >
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
          >
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
              />
            </div>
            <div
              class="Box-sc-1qu1edy-0 fehlWH"
              width="360px"
            >
              <p
                class="Text-sc-1wu7vpu-0 eEDmVF"
                color="currentColor"
                font-size="medium"
              >
                Eaches
              </p>
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
        >
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
          >
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
              />
            </div>
            <div
              class="Box-sc-1qu1edy-0 fehlWH"
              width="360px"
            >
              <p
                class="Text-sc-1wu7vpu-0 eEDmVF"
                color="currentColor"
                font-size="medium"
              >
                Pallets and boxes
              </p>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
    <form
      class="Form-n70q8u-0 fuhEdK"
      mb="x6"
    >
      <h2
        class="Text-sc-1wu7vpu-0-h2 heWDlS"
        font-size="larger"
        font-weight="medium"
      >
        Prefix
      </h2>
      <fieldset
        class="FormSection-sc-5yud6c-1 klMAvm"
      >
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
        >
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
          >
            <div
              class="Box-sc-1qu1edy-0 cujNNu"
            >
              <p
                class="Text-sc-1wu7vpu-0 eEDmVF"
                color="currentColor"
                font-size="medium"
              >
                Eaches
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
              />
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
        >
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
          >
            <div
              class="Box-sc-1qu1edy-0 cujNNu"
            >
              <p
                class="Text-sc-1wu7vpu-0 eEDmVF"
                color="currentColor"
                font-size="medium"
              >
                Pallets and boxes
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormSection-sc-5yud6c-1 cJYtnA"
      >
        <legend
          class="Text-sc-1wu7vpu-0-h3 Headings__SubsectionTitle-igpciy-0 FormSection__FormSectionTitle-sc-5yud6c-0 gaHdwg"
          font-size="large"
          font-weight="medium"
        >
          With Custom Width
        </legend>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
        >
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
          >
            <div
              class="Box-sc-1qu1edy-0 hEsaBU"
              width="360px"
            >
              <p
                class="Text-sc-1wu7vpu-0 eEDmVF"
                color="currentColor"
                font-size="medium"
              >
                Eaches
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
              />
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
        >
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
          >
            <div
              class="Box-sc-1qu1edy-0 hEsaBU"
              width="360px"
            >
              <p
                class="Text-sc-1wu7vpu-0 eEDmVF"
                color="currentColor"
                font-size="medium"
              >
                Pallets and boxes
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormSection-sc-5yud6c-1 cJYtnA"
      >
        <legend
          class="Text-sc-1wu7vpu-0-h3 Headings__SubsectionTitle-igpciy-0 FormSection__FormSectionTitle-sc-5yud6c-0 gaHdwg"
          font-size="large"
          font-weight="medium"
        >
          With right alignment
        </legend>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
        >
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
          >
            <div
              class="Box-sc-1qu1edy-0 hEsaBU"
              width="360px"
            >
              <p
                class="Text-sc-1wu7vpu-0 edyTXm"
                color="currentColor"
                font-size="medium"
              >
                Eaches
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
              />
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
        >
          <div
            class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
          >
            <div
              class="Box-sc-1qu1edy-0 hEsaBU"
              width="360px"
            >
              <p
                class="Text-sc-1wu7vpu-0 edyTXm"
                color="currentColor"
                font-size="medium"
              >
                Pallets and boxes
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
              />
            </div>
          </div>
        </div>
      </fieldset>
    </form>
    <form
      class="Form-n70q8u-0 fuhEdK"
      mb="x6"
    >
      <h2
        class="Text-sc-1wu7vpu-0-h2 heWDlS"
        font-size="larger"
        font-weight="medium"
      >
        Prefix and Suffix
      </h2>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
      >
        <div
          class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
        >
          <div
            class="Box-sc-1qu1edy-0 cujNNu"
          >
            <p
              class="Text-sc-1wu7vpu-0 eEDmVF"
              color="currentColor"
              font-size="medium"
            >
              Quantity
            </p>
          </div>
          <div
            class="Box-sc-1qu1edy-0 hxUhcg"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
            />
          </div>
          <div
            class="Box-sc-1qu1edy-0 gtRBwd"
          >
            <p
              class="Text-sc-1wu7vpu-0 eEDmVF"
              color="currentColor"
              font-size="medium"
            >
              Eaches
            </p>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Input with all props 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 efLeRi"
          >
            Input
          </span>
          <span
            class="Text-sc-1wu7vpu-0 bphWXP"
            color="darkGrey"
            font-size="12px"
          >
            Required
          </span>
          <p
            class="Text-sc-1wu7vpu-0 HelpText__HelpTextContent-sc-1jzmq2g-0 feAJVX"
            color="currentColor"
            font-size="medium"
          >
            Additional help text
          </p>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
        >
          <div
            class="Box-sc-1qu1edy-0 hxUhcg"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="true"
              class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
              placeholder="Placeholder"
              required=""
            />
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input with custom ID 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 efLeRi"
          >
            Label
          </span>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
        >
          <div
            class="Box-sc-1qu1edy-0 hxUhcg"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 cMrwRk"
              id="my-own-id"
            />
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input with error list  1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 efLeRi"
          >
            Label
          </span>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
        >
          <div
            class="Box-sc-1qu1edy-0 hxUhcg"
            display="flex"
          >
            <input
              aria-invalid="true"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 jMjRjb"
            />
          </div>
        </div>
      </label>
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 ycNbA"
        color="red"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 QuoIa"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-1jic7dw-0 kqhCKM"
        >
          <p
            class="Text-sc-1wu7vpu-0 RbfMK"
            color="currentColor"
            font-size="medium"
          >
            Error message
          </p>
          <ul
            class="List-sc-1cqkmnl-0 diqcEx"
            color="currentColor"
          >
            <li
              class="ListItem-qqenhw-0 gzsWDK"
              color="currentColor"
            >
              Error message 1
            </li>
            <li
              class="ListItem-qqenhw-0 gzsWDK"
              color="currentColor"
            >
              Error message 2
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input with error message 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 ilQgHG"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 efLeRi"
          >
            Label
          </span>
        </div>
        <div
          class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
        >
          <div
            class="Box-sc-1qu1edy-0 hxUhcg"
            display="flex"
          >
            <input
              aria-invalid="true"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 jMjRjb"
            />
          </div>
        </div>
      </label>
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 ycNbA"
        color="red"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 QuoIa"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-1jic7dw-0 kqhCKM"
        >
          <p
            class="Text-sc-1wu7vpu-0 RbfMK"
            color="currentColor"
            font-size="medium"
          >
            Error message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
